# todays-flower

./: .gitignore  README.en.md  README.md  TEXT_INVENTORY.md  index.html  notification.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
electron/: main.cjs  preload.cjs  update.cjs  update2.cjs
scripts/: svg-to-flower-tsx.mjs
src/: App.tsx  NotificationWindow.tsx  global.d.ts  index.css  main.tsx  notification.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/flowers/: bloom.tsx  bud.tsx  stem.tsx  variants.tsx
src/assets/flowers/grass-1/: bloom.tsx  bud.tsx  stem.tsx
src/assets/flowers/grass-2/: bud.tsx
src/assets/flowers/todo-1/: bloom.tsx  stem.tsx
src/assets/flowers/todo-2/: bloom.tsx  bud.tsx
src/components/: GardenFlower.tsx
src/platform/: desktop.ts  tauri.ts
tools/: flower_svg_batch_gui.py
